src/test/ui/type-ascription/ref-def.stderr
error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/ref-def.rs:11:15
   |
LL |   let ref x = r : &Foo;
   |               ^^^^^^^^
   |
help: try to use the type ascription when creating the local variable
   |
LL | let r: &Foo = &mut foo;
   | ^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/ref-def.rs:14:25
   |
LL |   let ref another_one = (r : &Foo).a;
   |                         ^^^^^^^^^^
   |
help: try to use the type ascription when creating the local variable
   |
LL | let r: &Foo = &mut foo;
   | ^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/ref-def.rs:19:19
   |
LL |   let ref again = (arr_ref : &[u32])[1];
   |                   ^^^^^^^^^^^^^^^^^^
   |
help: try to use the type ascription when creating the local variable
   |
LL | let arr_ref: &[u32] = &arr;
   | ^^^^^^^^^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/ref-def.rs:19:19
   |
LL |   let ref again = (arr_ref : &[u32])[1];
   |                   ^^^^^^^^^^^^^^^^^^
   |
help: try to use the type ascription when creating the local variable
   |
LL | let arr_ref: &[u32] = &arr;
   | ^^^^^^^^^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/ref-def.rs:22:24
   |
LL |   let ref last_one = &*(arr_ref : &[u32]);
   |                        ^^^^^^^^^^^^^^^^^^
   |
help: try to use the type ascription when creating the local variable
   |
LL | let arr_ref: &[u32] = &arr;
   | ^^^^^^^^^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/ref-def.rs:22:24
   |
LL |   let ref last_one = &*(arr_ref : &[u32]);
   |                        ^^^^^^^^^^^^^^^^^^
   |
help: try to use the type ascription when creating the local variable
   |
LL | let arr_ref: &[u32] = &arr;
   | ^^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

